--- a/src/stylesheet/App.css
+++ b/src/stylesheet/App.css
@@ -21,3 +21,14 @@
   height: 300px;
   border: 1px solid #faf8f8;
 }
+img[alt="pokemon"]{
+  width: 100%;
+  height: 50px;
+  box-shadow: 1px 1px 1px 1px #f1efef;
+}
+img[alt="pokemon"]:hover{
+  margin-top: 1px;
+  width: 100%;
+  height: 52px;
+  transition: height 15s ease-out;
+}
