--- a/src/stylesheet/App.css
+++ b/src/stylesheet/App.css
@@ -63,3 +63,18 @@ img[alt="oops"]{
   padding: 5px;
   margin-top: 10px;
 }
+@media only screen and (max-width: 600px) {
+  .name-of-pokemon{
+    font-size: 8px;
+  }
+  img[alt="pokemon-detail-img"]{
+    width: 100%;
+    height: 70px;
+    padding: 8px;
+  }
+  .topLeftComp{
+    width: 100%;
+    min-height: 200px;
+    border: 1px solid #faf8f8;
+  }
+}
