--- a/src/stylesheet/App.css
+++ b/src/stylesheet/App.css
@@ -18,6 +18,7 @@
   width: 100%;
   height: 220px;
   border: 1px solid #faf8f8;
+  word-wrap: break-word;
 }
 .topLeftComp{
   width: 100%;
@@ -70,7 +71,16 @@ img[alt="pokemon-show"]{
   width: 100%;
   height: 160px;
 }
-
+.abilities-of-pokemon-detail{
+  font-size: 14px;
+  font-weight: 400;
+}
+.name-of-pokemon-detail{
+  text-decoration: underline;
+}
+.bottom{
+  height: 100%;
+}
 @media only screen and (max-width: 600px) {
   .name-of-pokemon{
     font-size: 8px;
