--- a/src/stylesheet/Header.css
+++ b/src/stylesheet/Header.css
@@ -6,3 +6,9 @@
   font-size: 20px;
   text-transform: capitalize;
 }
+@media only screen and (max-width: 600px) {
+  .header-size{
+    font-size: 10px;
+    margin-left: 20%;
+  }
+}
